# exodus

./: Cargo.toml  readme.md
src/: config.rs  editor.rs  main.rs  plugin.rs  plugins.rs  syntax.rs
